<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="600dp"
        android:layout_height="370dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/yay"
            android:src="@mipmap/header_image" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="100dp"

        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/spark"
            android:src="@mipmap/poster_sparkling" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/happyHolyday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happyHoliday"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/happyHolyday"
            android:text="@string/sebastian"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/haveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveChristmas"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/letText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/haveText"
            android:text="@string/letHeart"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/fromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/letText"
            android:text="@string/fromTroubles"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <Button
            android:id="@+id/snowBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:text="@string/snowButton" />

        <Button
            android:id="@+id/bellBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:layout_toEndOf="@+id/snowBtn"
            android:text="@string/gingleButton"

            />

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>